# edsvfh

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: #U7b2c#U4e8c#U7ae0_#U5c0d#U9f4a#U8aaa#U660e.md  GOOGLE_ONE_2TB_#U64cd#U4f5c#U6307#U5357.md  RUNPOD_#U5b8c#U6574#U6559#U5b78.md  RUNPOD_#U8cc7#U6599#U4e0b#U8f09_#U5b8c#U6574#U6307#U5357.md  RUNPOD_BACKGROUND_USAGE.md  RUNPOD_CLEAN_RERUN_CANARY.md  RUNPOD_DROID_FAILURE_V31.md  RUNPOD_DROID_RLDS_FAILURE_V31_2.md  RUNPOD_LARGER_HORIZONS_V30.md  RUNPOD_V30_REPLAY_ABLATION.md  RUNPOD_V33_FROM_SCRATCH.md  RUNPOD_V34_OPERATIONS.md
edsvfh/: __init__.py  api.py  calibration.py  checkpointing.py  cli.py  config.py  context.py  decision.py  droid_convert.py  droid_failure.py  encoders.py  eval_protocols.py  fino_convert.py  fino_finetune.py  fiper_pseudo_onset.py  manifest_tools.py  memory.py  models.py  pipeline.py  progress.py  pseudo_labels.py  public_data.py  schemas.py  sharded_train.py  train_public.py  types.py  watcher.py
logs/: ablation_suite_metrics.csv  ablation_suite_metrics.json  clean_rerun_canary_summary.json  clean_rerun_canary_summary.txt  larger_horizons_eval_1x3x5x10x15.json  replay_protocol_metrics.csv  replay_protocol_metrics_episodes.csv
tests/: conftest.py  test_api.py  test_droid_conversion.py  test_droid_failure.py  test_eval_protocols.py  test_fino_finetune.py  test_fiper_pseudo_onset.py  test_manifest_tools.py  test_paper_pack.py  test_pipeline.py  test_progress.py  test_protobuf_compat.py  test_public_data.py  test_replay_precomputed_offline.py  test_resume_checkpointing.py  (+3 more)
(+85 files in other folders)
