[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edsvfh-public"
version = "0.3.1"
description = "Event-driven subgoal verifier with failure horizon for public robot-learning datasets"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.5",
  "scikit-learn>=1.3",
  "fastapi>=0.111",
  "uvicorn>=0.25",
  "opencv-python>=4.8",
  "h5py>=3.9",
  "pillow>=10.0",
]

[project.optional-dependencies]
hf = [
  "transformers>=4.52,<5",
  "safetensors>=0.4.3",
  "huggingface-hub<1",
]

test = [
  "pytest>=8.0",
]

tfds = [
  "tensorflow>=2.16",
  "tensorflow-datasets>=4.9",
  "protobuf<7",
]

[tool.setuptools]
packages = ["edsvfh"]
